tests/ui/parser/import-from-path.rs
use foo::{bar}::baz //~ ERROR expected `;`, found `::`
